Fixed overflow problem, moving over testing with Jest/Enzyme

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,19 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.scrollable {
+  border: 1px black;
+  min-height: 400px;
+  max-height: 500px;
+  max-width: 500px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  word-wrap: break-word;
+}
+
+.breakable {
+  width: 70%;
+  word-break: break-all;
+}
+
